add dim capability for L810

--- a/app.json
+++ b/app.json
@@ -357,6 +357,7 @@
       },
       "capabilities": [
         "onoff",
+        "dim",
         "measure_luminance",
         "alarm_motion"
       ],
