--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "en": "Adds support for Steinel SmartHome products"
   },
   "category": "lights",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "compatibility": ">=1.5.0",
   "author": {
     "name": "Ted Tolboom",
@@ -42,29 +42,6 @@
       "images": {
         "large": "/drivers/IS_140_2/assets/images/large.png",
         "small": "/drivers/IS_140_2/assets/images/small.png"
-      },
-      "mobile": {
-        "components": [
-          {
-            "id": "icon",
-            "capabilities": [
-              "onoff"
-            ]
-          },
-          {
-            "id": "sensor",
-            "capabilities": [
-              "measure_luminance",
-              "alarm_motion"
-            ]
-          },
-          {
-            "id": "toggle",
-            "capabilities": [
-              "onoff"
-            ]
-          }
-        ]
       },
       "zwave": {
         "manufacturerId": [
@@ -176,25 +153,6 @@
           "type": "number"
         },
         {
-          "id": "brightness_measure_interval",
-          "value": 0,
-          "label": {
-            "en": "Brightness measuring interval [minutes]"
-          },
-          "hint": {
-            "en": "Interval for ambient light measuring when lamp is on (lamp switches off shortly and measures). Default: 0 = function is off, Range: 0, 5 - 120 [minutes]"
-          },
-          "zwave": {
-            "index": 6,
-            "size": 1
-          },
-          "attr": {
-            "min": 0,
-            "max": 120
-          },
-          "type": "number"
-        },
-        {
           "id": "external_ambient_light",
           "value": true,
           "label": {
@@ -216,7 +174,7 @@
             "en": "Disable local control"
           },
           "hint": {
-            "en": "Can disable sensor controll “Stupid” mode (bit 2 = 1):\r\n - has higher priority then slave mode.\r\n - lamp is permanently on (usefull for simple power wall switch controlling).\r\n\r\nSlave mode ( bit 0 = 1 ):\r\n- only if included in Z-Wave network\r\n- usefull for controlling via third-party sensor\r\n- lamp is directly controlled via Z-Wave, internal sensors are not used for controlling it.\r\nCentral unit checking ( bit 1 = 1 ):\r\n( usefull especialy for controlling via gateway ) When Slave bit is 0:\r\n- lamp signalises fail of lifeline connection ( if this bit is zero fail of lifeline connection is not signalised ) When slave bit is 1:\r\n- lamp checks presence of Z-Wave device in lifeline group ( gateway ). If it is not present for 2 minutes ( testing repeatedly every 30 seconds ) device switches to normal mode in the same way as after the end of local disabled mode ( ON_BEHAVIOUR )\r\n- The device checks every 1 minute for recovery of Lifeline connection.\r\n- if no lifeline specified - it works in normal mode\r\nBe careful with this option, lamp stops using it’s own motion sensor in Slave and Stupid mode."
+            "en": "Can disable sensor controll\r\n\r\n“Stupid” mode (bit 2 = 1):\r\n - has higher priority then slave mode.\r\n - lamp is permanently on (usefull for simple power wall switch controlling).\r\n\r\nSlave mode ( bit 0 = 1 ):\r\n- only if included in Z-Wave network\r\n- usefull for controlling via third-party sensor\r\n- lamp is directly controlled via Z-Wave, internal sensors are not used for controlling it.\r\nCentral unit checking ( bit 1 = 1 ):\r\n( usefull especialy for controlling via gateway ) When Slave bit is 0:\r\n- lamp signalises fail of lifeline connection ( if this bit is zero fail of lifeline connection is not signalised ) When slave bit is 1:\r\n- lamp checks presence of Z-Wave device in lifeline group ( gateway ). If it is not present for 2 minutes ( testing repeatedly every 30 seconds ) device switches to normal mode in the same way as after the end of local disabled mode ( ON_BEHAVIOUR )\r\n- The device checks every 1 minute for recovery of Lifeline connection.\r\n- if no lifeline specified - it works in normal mode\r\n\r\nBe careful with this option, lamp stops using it’s own motion sensor in Slave and Stupid mode."
           },
           "zwave": {
             "index": 9,
@@ -393,42 +351,18 @@
     },
     {
       "id": "L_810_LED_iHF",
-      "class": "light",
+      "class": "sensor",
       "name": {
         "en": "L 810 LED iHF Z-Wave"
       },
       "capabilities": [
         "onoff",
-        "dim",
         "measure_luminance",
         "alarm_motion"
       ],
       "images": {
         "large": "/drivers/L_810_LED_iHF/assets/images/large.png",
         "small": "/drivers/L_810_LED_iHF/assets/images/small.png"
-      },
-      "mobile": {
-        "components": [
-          {
-            "id": "icon",
-            "capabilities": [
-              "onoff"
-            ]
-          },
-          {
-            "id": "sensor",
-            "capabilities": [
-              "measure_luminance",
-              "alarm_motion"
-            ]
-          },
-          {
-            "id": "slider",
-            "capabilities": [
-              "dim"
-            ]
-          }
-        ]
       },
       "zwave": {
         "manufacturerId": [
@@ -736,7 +670,7 @@
         },
         {
           "id": "sequence_time",
-          "value": 255,
+          "value": 10,
           "label": {
             "en": "Maximum delay"
           },
@@ -788,29 +722,6 @@
       "images": {
         "large": "/drivers/RS_LED_D2/assets/images/large.png",
         "small": "/drivers/RS_LED_D2/assets/images/small.png"
-      },
-      "mobile": {
-        "components": [
-          {
-            "id": "icon",
-            "capabilities": [
-              "onoff"
-            ]
-          },
-          {
-            "id": "sensor",
-            "capabilities": [
-              "measure_luminance",
-              "alarm_motion"
-            ]
-          },
-          {
-            "id": "toggle",
-            "capabilities": [
-              "onoff"
-            ]
-          }
-        ]
       },
       "zwave": {
         "manufacturerId": [
@@ -1099,7 +1010,7 @@
         },
         {
           "id": "sequence_time",
-          "value": 255,
+          "value": 10,
           "label": {
             "en": "Maximum delay"
           },
@@ -1151,29 +1062,6 @@
       "images": {
         "large": "/drivers/XLED_home_2/assets/images/large.png",
         "small": "/drivers/XLED_home_2/assets/images/small.png"
-      },
-      "mobile": {
-        "components": [
-          {
-            "id": "icon",
-            "capabilities": [
-              "onoff"
-            ]
-          },
-          {
-            "id": "sensor",
-            "capabilities": [
-              "measure_luminance",
-              "alarm_motion"
-            ]
-          },
-          {
-            "id": "toggle",
-            "capabilities": [
-              "onoff"
-            ]
-          }
-        ]
       },
       "zwave": {
         "manufacturerId": [
@@ -1291,7 +1179,7 @@
             "en": "Brightness measuring interval [minutes]"
           },
           "hint": {
-            "en": "Interval for ambient light measuring when lamp is on (lamp switches off shortly and measures). Default: 0 = function is off, Range: 0, 5 - 120 [minutes]"
+            "en": "Interval for ambient light measuring when lamp is on ( lamp switches\r\noff shortly and measures ). 0=function is off"
           },
           "zwave": {
             "index": 6,
@@ -1462,7 +1350,7 @@
         },
         {
           "id": "sequence_time",
-          "value": 255,
+          "value": 10,
           "label": {
             "en": "Maximum delay"
           },
