--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"dependencies": {
 		"homey-log": "^1.0.3",
-		"homey-meshdriver": "^1.2.5"
+		"homey-meshdriver": "^1.2.10"
 	},
 	"devDependencies": {},
 	"scripts": {
@@ -17,7 +17,7 @@
 		"url": "git+https://github.com/TedTolboom/de.steinel.git"
 	},
 	"author": "Ted Tolboom",
-	"license": "ISC",
+	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/TedTolboom/de.steinel/issues"
 	},
